Header footer responsive styling.

--- a/mitx/lms/static/sass/_overrides.scss
+++ b/mitx/lms/static/sass/_overrides.scss
@@ -12,6 +12,7 @@
 .course-info {
 
     .details {
+        font-family: $font-family-sans-serif;
 
         h1, h2, h3, h4, h5, h6,
         p, span, a {
@@ -60,7 +61,9 @@
 // ------------------------------
 // #DEVELOPERS
 // ------------------------------
-
+.mt0 {
+    margin-top: 0 !important;
+}
 
 // ------------------------------
 // #SHAME
