--- a/mitx/lms/static/sass/shared-v2/_header.scss
+++ b/mitx/lms/static/sass/shared-v2/_header.scss
@@ -127,6 +127,7 @@
                     list-style: none;
                     font-size: 0; //to remove white space between inline HTML elements, and child must have font-size
                     @include margin-right($baseline*0.8);
+                    @include margin-left(0);
                     @include media-up(md) {
                         display: inline-block;
                     }
@@ -200,6 +201,9 @@
     @include padding(0, ($baseline*0.75), 0, ($baseline*0.75));
     margin: auto;
     max-width: $container-default;
+    @include media-down(md) {
+        height: auto !important;
+    }
     @include media-up(md) {
         display: table;
         width: 100%;
@@ -213,12 +217,59 @@
     }
 
     .hamburger-menu {
-        top: $baseline*0.5;
+        border: 1px solid transparent;
+        border-radius: 50%;
+        height: 38px;
+        width: 38px;
+        padding: $baseline/4;
+        left: auto;
+        top: $baseline/4;
+        right: $baseline;
+
+        .line {
+            background: $light-gray-blue;
+            height: 2px;
+            width: 30px;
+            left: 0;
+            right: 0;
+            margin: auto;
+
+            &:nth-child(1) {
+                top: 8px;
+            }
+
+            &:nth-child(2),
+            &:nth-child(3) {
+                top: 16px;
+            }
+
+            &:nth-child(4) {
+                top: 24px;
+            }
+        }
+
+        &:focus {
+            outline: none;
+        }
+
+        &.open {
+            border-color: $light-gray-blue;
+
+            .line {
+                width: 20px;
+
+                &.line:nth-child(1) {
+                    left: auto;
+                    right: 50%;
+                }
+            }
+        }
     }
 
     .header-logo {
         display: block;
         margin: 0;
+        @include text-align(left);
         @include media-up(md) {
             display: table;
         }
@@ -235,10 +286,13 @@
             display: inline-block;
             float: none;
             margin: 0;
+            @include media-down(sm) {
+                padding-top: 2px;
+            }
 
             .logo {
                 margin: 0;
-                height: ($baseline*1.75);
+                height: ($baseline*2);
                 @include media-up(sm) {
                     height: ($baseline*2.45);
                 }
@@ -249,6 +303,99 @@
             margin: 0;
             @include text-align(left);
             @include padding-left($baseline);
+        }
+    }
+}
+
+.mobile-menu {
+    border-top-color: $light-blue-gray;
+    @include margin($baseline*0.5, 0, -($baseline*0.5), 0);
+
+    .mobile-nav-item {
+
+        &.custom-nav {
+            margin: 0;
+            padding: $baseline*0.5 0;
+            position: relative;
+
+            a {
+                border: none;
+                color: $charcoal-gray;
+                font-size: 20px;
+                font-weight: normal;
+                padding: 0 $baseline*0.75;
+                margin-bottom: $baseline*0.75;
+                @include media-up(sm) {
+                    text-align: center;
+                }
+
+                &:hover,
+                &:focus {
+                    background: $ice-blue;
+                    color: $charcoal-gray;
+                }
+            }
+
+            &:after {
+                content: '';
+                background: $ice-blue;
+                margin: auto;
+                height: 1px;
+                position: absolute;
+                left: $baseline*0.75;
+                right: $baseline*0.75;
+                bottom: 0;
+            }
+        }
+
+        a {
+
+            &.sign-in-btn,
+            &.register-btn {
+                font-size: 14px;
+                font-family: $font-roboto;
+                font-weight: 500;
+                @include padding($baseline*0.45, $baseline, $baseline*0.4, $baseline);
+                text-align: center;
+            }
+
+            &.sign-in-btn {
+                background-color: $white;
+                border-color: $primary;
+                color: $primary;
+                min-width: $baseline*7;
+                border-radius: $border-radius;
+
+                &:hover {
+                    background-color: $primary;
+                    color: $white;
+                }
+            }
+
+            &.register-btn {
+                background-color: $primary;
+                border-color: $primary;
+                color: $white;
+                min-width: $baseline*10;
+                border-radius: $border-radius;
+
+                &:hover {
+                    background-color: $white;
+                    color: $primary;
+                }
+            }
+
+            &:after {
+                content: none;
+            }
+        }
+
+        &.mobile-pad-item {
+
+            a {
+                max-width: 200px;
+                margin: $baseline*0.75 auto;
+            }
         }
     }
 }
