--- a/mitx/lms/static/sass/course/_course-sidebar.scss
+++ b/mitx/lms/static/sass/course/_course-sidebar.scss
@@ -12,7 +12,7 @@
             .important-dates-item {
                 border-color: rgba($light-blue-gray, .7);
                 border-style: solid;
-                border-width: 0 0 1px;
+                border-width: 1px 0 0;
                 margin: 0;
                 @include padding($baseline*0.85, 0, $baseline*0.85, 0);
 
@@ -58,8 +58,13 @@
                     font-weight: normal;
                 }
 
-                &:first-child {
-                    border-top-width: 1px;
+                &:last-child {
+                    border-bottom-width: 1px;
+                }
+
+                display: none; // Hide all list items as per design
+                &:nth-last-of-type(-n+3) {
+                    display: block; // Enable last three items as per design
                 }
             }
         }
