--- a/mitx/lms/templates/footer.html
+++ b/mitx/lms/templates/footer.html
@@ -36,10 +36,10 @@
             <a href="#!">${_("Contact")}</a>
           </li>
           <li>
-            <a href="#!">${_("Twitter")}</a>
+            <a href="https://twitter.com/mitopenlearning?lang=en" target="_blank">${_("Twitter")}</a>
           </li>
           <li>
-            <a href="#!">${_("Facebook")}</a>
+            <a href="https://www.facebook.com/mitopenlearning/" target="_blank">${_("Facebook")}</a>
           </li>
         </ul>
       </nav>
