--- a/mitx/lms/templates/header/navbar-not-authenticated.html
+++ b/mitx/lms/templates/header/navbar-not-authenticated.html
@@ -45,7 +45,7 @@ from six import text_type
   <div class="secondary">
     <div>
       <ul class="custom-nav mobile-nav-item hidden-mobile nav-item">
-          <li><a href="javascript:void(0);">Courses</a></li>
+          <li><a href="${marketing_link('COURSES')}">Courses</a></li>
           <li><a href="javascript:void(0);">About</a></li>
           <li><a href="javascript:void(0);">Contact</a></li>
       </ul>
